other/label-nodes-cri/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: label-nodes-cri
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: chainsaw-step-00-apply-1.yaml
  - name: step-01
    try:
    - script:
        content: |
          kubectl get configmap kyverno -n kyverno -o yaml | sed 's/\[Node\/\*,\*,\*\]//g' - | sed 's/\[Node,\*,\*\]//g' - | kubectl apply -f -
    - sleep:
        duration: 5s
  - name: step-02
    try:
    - apply:
        file: ../label-nodes-cri.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - sleep:
        duration: 10s
    - script:
        content: ./label-check.sh
  - name: step-04
    try:
    - script:
        content: |
          kubectl get configmap -n kyverno kyverno -o yaml | sed 's/\[APIService,\*,\*\]/\[Node,\*,\*\] \[Node\/\*,\*,\*\] \[APIService,\*,\*\]/g' - | kubectl apply -f -
    - script:
        content: |
          node=$(kubectl get nodes --no-headers | awk '{print $1}' | head -n 1);
          kubectl label --overwrite nodes $node runtime-
